# cache_compare

./: 2q.c  CMakeLists.txt  TODO  arc.c  benchmark_cache.cpp  cache.h  clock.c  hashtable.c  hashtable.h  list.c  list.h  lru.c  main.c
include/: 2q.h  arc.h  cache.h  clock.h  list.h  lru.h
src/: main.c
src/algorithms/: 2q.c  arc.c  clock.c  lru.c
src/utilities/: hashtable.c  list.c
tests/: benchmark_cache.cpp
